--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,4 +3,12 @@ name = "ganymede"
 version = "0.1.0"
 authors = ["Michael Byrne <16238945+MichaelByrneAU@users.noreply.github.com>"]
 
+[[bench]]
+name = "temp"
+harness = false
+
 [dependencies]
+num = "0.2.0"
+
+[dev-dependencies]
+criterion = "0.2.4"
