--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,5 @@ version = "0.1.0"
 authors = ["Michael Byrne <16238945+MichaelByrneAU@users.noreply.github.com>"]
 
 [dependencies]
+noisy_float = { git = "https://github.com/MichaelByrneAU/noisy_float-rs" }
 num = "0.2.0"
