--- a/crates/ga_core/Cargo.toml
+++ b/crates/ga_core/Cargo.toml
@@ -5,3 +5,6 @@ authors = ["Michael Byrne <16238945+MichaelByrneAU@users.noreply.github.com>"]
 edition = "2018"
 
 [dependencies]
+
+[dev-dependencies]
+assert_approx_eq = "1.1.0"
