--- a/crates/ga_core/Cargo.toml
+++ b/crates/ga_core/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Michael Byrne <16238945+MichaelByrneAU@users.noreply.github.com>"]
 edition = "2018"
 
 [dependencies]
+num = "0.2.0"
 
 [dev-dependencies]
 assert_approx_eq = "1.1.0"
